--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@
 
 
 body{
-background-color: lightblue;
+background: #2b5876;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #4e4376, #2b5876);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #4e4376, #2b5876); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 
@@ -14,31 +16,33 @@ h1{
 	text-align: center;	
 	margin-top: 5%;
 	color: green;
+	border-bottom: solid 2px yellow;
+	margin: 3% 35%;
 }
 
 
 .buttons{
-display: flex;
-justify-content: space-around;
-padding-top: 10%;
+	display: flex;
+	justify-content: space-around;
+	padding-top: 10%;
 }
 
 
 .button{
-padding-top: 1%;
-margin: auto;
-color: green;
-font-size: 1.6em;
-background-color: cyan;
-border-radius: 5%;
-box-shadow: 1px 2px 3px grey,
-2px 3px 4px grey,
-3px 4px 5px grey,
-4px 5px 6px grey,
-5px 6px 7px black,
-6px 7px 8px black,
-7px 8px 9px black;
-cursor: pointer;
+	padding-top: 1%;
+	margin: auto;
+	color: green;
+	font-size: 1.6em;
+	background-color: cyan;
+	border-radius: 5%;
+	box-shadow: 1px 2px 3px grey,
+	2px 3px 4px grey,
+	3px 4px 5px grey,
+	4px 5px 6px grey,
+	5px 6px 7px black,
+	6px 7px 8px black,
+	7px 8px 9px black;
+	cursor: pointer;
 }
 
 
@@ -94,4 +98,11 @@ cursor: pointer;
 .button:hover span:after {
   opacity: 1;
   right: 0;
+}
+
+
+.edit{
+text-align: center;	
+margin: 10% 10%;
+font-size: 1.35em;
 }
